# Team3AmazonProject

./: .gitignore  README.md  coco_setup_guide.md  data.yaml  face_detect.py  main.py  pyproject.toml  quick_test.py  test_custom_model.py  test_trained_model.py  test_yolov8.py  train_custom.py  train_yolov8.py
datasets/coco8/labels/: train.cache  val.cache
demo_app/: README.md  index.html
demo_app/backend/: yolov8_infer_api.py
demo_app/public/: index.html
demo_app/src/components/: ModelUploader.tsx  VideoDetectionApp.tsx  VideoPlayer.tsx  VideoUploader.tsx
demo_app/src/types/: detection.ts
demp_app/src/: App.tsx
demp_app/src/components/: DetectionResults.tsx  VideoDetectionApp.tsx  VideoPlayer.tsx
notebooks/: SAM.ipynb  tutorial.ipynb
notebooks/furniture_project_3/: furniture_yolov8n_0805_204806config_20250805_204806.json
notebooks/furniture_project_3/furniture_yolov8n/: args.yaml  params.txt  results.csv
notebooks/furniture_project_3/furniture_yolov8n_/: args.yaml
notebooks/furniture_project_3/furniture_yolov8n_0804/: args.yaml  furniture_yolov8n_config_20250804_174100.json  results.csv
notebooks/furniture_project_3/furniture_yolov8n_20250805_205000/: args.yaml
notebooks/furniture_project_3/furniture_yolov8n_20250805_223347/: args.yaml  config.json  results.csv
results/coco8_training/: args.yaml
runs/custom/indoor_night/: args.yaml
runs/custom/indoor_night2/: args.yaml  results.csv
src/: download_coco.py
temp/: analyze_dataset.py  data.yaml  gpu_test.py  setup_instructions.md  test_trained_model.py  train_with_coco.py
(+5 files in other folders)
