[project]
name = "team3amazonproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "ipynb>=0.5.1",
    "pyyaml>=6.0.2",
    "ultralytics>=8.3.170",
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "Pillow",
    "uvicorn>=0.35.0",
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
]

[tool.uv.workspace]
members = [
    "demp_app",
]
